// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with props 1`] = `
<div
  className="locked-ends locked-sides background--dark-primary floating offset_b736ty"
>
  <div
    className="floating__item one-whole"
  >
    <Connect(VideoPlayerWithoutData)
      id="testcode"
    />
  </div>
</div>
`;

exports[`test renders with props 1`] = `
<div
  className="locked-ends locked-sides background--dark-primary floating offset_b736ty">
  <div
    className="floating__item one-whole">
    <Connect(VideoPlayerWithoutData)
      id="testcode" />
  </div>
</div>
`;
